major issues fixed

--- a/details.html
+++ b/details.html
@@ -77,6 +77,11 @@
         .product-info .sizes {
             margin-top: 15px;
         }
+        .product-info img {
+           position: absolute;
+           right: 70px;
+           top: 190px;
+        }
 
         .product-info button {
             padding: 12px 25px;
@@ -88,21 +93,21 @@
             transition: background-color 0.3s ease;
         }
 
-        .product-info .add-to-cart {
+        .product-info .add-to-wishlist {
             background-color: #3498db;
             color: #fff;
         }
 
-        .product-info .add-to-cart:hover {
+        .product-info .add-to-wishlist:hover {
             background-color: #2980b9;
         }
 
-        .product-info .add-to-wishlist {
+        .product-info .add-to-cart {
             background-color: #f39c12;
             color: #fff;
         }
 
-        .product-info .add-to-wishlist:hover {
+        .product-info .add-to-cart:hover {
             background-color: #e67e22;
         }
 
