--- a/section_men.html
+++ b/section_men.html
@@ -23,8 +23,8 @@
       <div class="header">
         <div class="ticker">
           <p>
-            Download RBP App and get 10% off on your first purchase. Use
-            code:RBKAPP10
+            Download SS App and get 10% off on your first purchase. Use
+            code: SSAPP10
           </p>
         </div>
         <div class="header_wrap">
@@ -64,20 +64,24 @@
           <span class="material-symbols-outlined"> person </span>
           <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
           <hr />
-          <span
+          <a href="wishlist_products.html">
+            <span
             class="material-symbols-outlined"
             style="margin-top: 4px; cursor: pointer"
           >
             favorite
           </span>
+          </a>
           <hr />
-          <span class="material-symbols-outlined" style="cursor: pointer">
+          <a href="cart.html">
+            <span class="material-symbols-outlined" style="cursor: pointer">
             local_mall
           </span>
+          </a>
         </div>
       </div>
       <div class="navbar">
-        <img src="./assests/Sport style.png" alt="" />
+        <img id="homePageLogo" src="./assests/Sport style.png" alt="" />
         <a href="index.html">NEW</a>
         <a href="section_men.html">MEN</a>
         <a href="section_women.html">WOMEN</a>
@@ -99,7 +103,7 @@
         </div>
         <button class="deliverybtn">
           EXPRESS DELIVERY <br />
-          Select your nearest store>
+          Select your nearest store
         </button>
       </div>
       <!-- --------------------------- -->
@@ -153,7 +157,7 @@
             <span>to see express delivery options</span>
         </div>
         <div class="items-found">
-            <span>1999 items found</span>
+            <span>200+ items found</span>
         </div>
     </div>
       <div id="card-container">
@@ -198,7 +202,7 @@
             </div>
             <div class="about_us">
               <h4>ABOUT US</h4>
-              <p>Aditya Birla Fashion & Retail Ltd</p>
+              <p>Aditya Birla Fashion &amp Retail Ltd</p>
               <p>Find A Store</p>
             </div>
             <div class="community">
@@ -228,7 +232,7 @@
             <p style="margin-left: 80px;">Privacy Policy</p>
             <hr style="margin-left: 20px; margin-right: 20px; margin-bottom: 40px;">
             <p style="margin-right: 400px;">Cookie Policy</p>
-            <p>© 2023 Madura Fashion & Lifestyle, A Division of Aditya Birla Fashion & Retail Limited. All Rights Reserved.</p>
+            <p>© 2023 Madura Fashion &amp Lifestyle, A Division of Aditya Birla Fashion &amp Retail Limited. All Rights Reserved.</p>
           </div>
         </div>
       </footer>
