--- a/wishlist_products.html
+++ b/wishlist_products.html
@@ -36,58 +36,11 @@
         </aside>
         <main class="wishlist">
             <h1>Wish List</h1>
-            <div class="products">
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/3/39630562-13059561.jpg?q=75&auto=format&w=387" alt="Reebok Men Walking Shoes">
-                    <p class="product-name">Reebok Men Walking Shoes</p>
-                    <p class="product-price"><span class="original-price">₹2,499</span> ₹1,499 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/3/39624678-12852906.jpg?q=75&auto=format&w=387" alt="Mens Reebok Running Austin 20 M Shoes">
-                    <p class="product-name">Mens Reebok Running Austin 20 M Shoes</p>
-                    <p class="product-price"><span class="original-price">₹2,599</span> ₹1,559 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/3/39622095-12725815.jpg?q=75&auto=format&w=387" alt="Reebok Men Traveller LP M Running Shoes">
-                    <p class="product-name">Reebok Men Traveller LP M Running Shoes</p>
-                    <p class="product-price"><span class="original-price">₹2,299</span> ₹1,119 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/9/905001-11144350.jpg?q=75&auto=format&w=387" alt="Reebok Men Traveller LP M Running Shoes">
-                    <p class="product-name">Reebok Mens NANO X2 TR ADVENTURE</p>
-                    <p class="product-price"><span class="original-price">₹1,599</span> ₹1,999 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/9/920195-11533117.jpg?q=75&auto=format&w=387" alt="Reebok Men Traveller LP M Running Shoes">
-                    <p class="product-name">Reebok Men Essential Walking Shoes</p>
-                    <p class="product-price"><span class="original-price">₹3,299</span> ₹1,599 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/3/39622095-12725815.jpg?q=75&auto=format&w=387" alt="Reebok Men Traveller LP M Running Shoes">
-                    <p class="product-name">Reebok Mens NANO X2 TR ADVENTURE</p>
-                    <p class="product-price"><span class="original-price">₹2,199</span> ₹1,479 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
-                <div class="product-card">
-                    <span class="selling-fast">SELLING FAST</span>
-                    <img src="https://imagescdn.reebok.in/img/app/product/3/39621981-12721832.jpg?q=75&auto=format&w=387" alt="Reebok Men Traveller LP M Running Shoes">
-                    <p class="product-name">Reebok Men Quick Walking Shoess</p>
-                    <p class="product-price"><span class="original-price">₹4,299</span> ₹2,599 <span class="discount">40% OFF</span></p>
-                    <button class="delete-button">🗑️</button>
-                </div>
+            <div class="products" id="wishlist-products">
+                <!-- Wishlist products will be dynamically inserted here -->
             </div>
         </main>
     </div>
+    <script src="./components/wishlist.js"></script>
 </body>
 </html>
