--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
       <div class="header">
         <div class="ticker">
           <p>
-            Download RBP App and get 10% off on your first purchase. Use
-            code:RBKAPP10
+            Download SS App and get 10% off on your first purchase. Use
+            code: SSAPP10
           </p>
         </div>
         <div class="header_wrap">
-          <label
+          <!-- <label
             for="More_brands"
             style="font-size: x-small; margin-top: 8px; margin-left: 15px"
             >MORE BRANDS</label
-          >
-          <select
+          > -->
+          <!-- <select
             name="brands"
             id="More_brands"
             style="color: aliceblue; border: none"
-          ></select>
-          <hr style="margin-left: 10px; margin-right: 10px" />
+          ></select> -->
+          <!-- <hr style="margin-left: 10px; margin-right: 10px" /> -->
           <span
             style="
               margin-left: 10px;
@@ -46,20 +46,28 @@
               font-size: x-small;
               font-weight: bold;
             "
-            >Delivering to <br /><span
+            >
+            <!-- Delivering to  -->
+            <br />
+            <span
               style="text-decoration: underline; cursor: pointer"
-              >Add delivery location</span
+              >
+              <!-- Add delivery location -->
+              </span
             ></span
           >
           <span class="material-symbols-outlined"> location_on </span>
-          <span style="font-size: small; margin-top: 8px; cursor: pointer"
+         <span style="font-size: small; margin-top: 8px; cursor: pointer"
             >STORES</span
           >
+          
           <hr />
-          <span class="material-symbols-outlined"> feedback </span>
-          <span style="font-size: small; margin-top: 6px; cursor: pointer"
+          <span  class="material-symbols-outlined contact-later"> feedback </span>
+          <a class="contact-later" style="text-decoration: none;" href="contactUs.html"><span style="font-size: small; margin-top: 6px; cursor: pointer"
             >CONTACT US</span
           >
+          </a>
+          
           <hr />
           <span class="material-symbols-outlined"> person </span>
           <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
@@ -81,7 +89,7 @@
         </div>
       </div>
       <div class="navbar">
-        <img src="./assests/Sport style.png" alt="" />
+        <img id="homePageLogo" src="./assests/Sport style.png" alt="SportStyle" />
         <a href="#">NEW</a>
         <a href="section_men.html">MEN</a>
         <a href="section_women.html">WOMEN</a>
@@ -196,11 +204,11 @@
       </div>
       <!-- shoe category -->
        <div id ="shoe_category">
-        <a href="">RUNNING</a>
-        <a href="">WALKING</a>
+        <h2 style="margin-left: auto; margin-right: auto;" >LATEST</h2>
+        <!-- <a href="">WALKING</a>
         <a href="">TRAINING</a>
         <a href="">CLASSICS</a>
-        <a href="">VIEW ALL</a>
+        <a href="">VIEW ALL</a> -->
        </div>
       <hr />
       <div id="card-container">
