--- a/section_women.html
+++ b/section_women.html
@@ -23,8 +23,8 @@
       <div class="header">
         <div class="ticker">
           <p>
-            Download RBP App and get 10% off on your first purchase. Use
-            code:RBKAPP10
+            Download SS App and get 10% off on your first purchase. Use
+            code: SSAPP10
           </p>
         </div>
         <div class="header_wrap">
@@ -64,20 +64,24 @@
           <span class="material-symbols-outlined"> person </span>
           <span style="font-size: small; margin-top: 8px; cursor: pointer" id="login-btn"><a href="signup.html"></a>LOG IN</span>
           <hr />
-          <span
+          <a href="wishlist_products.html">
+            <span
             class="material-symbols-outlined"
             style="margin-top: 4px; cursor: pointer"
           >
             favorite
           </span>
+          </a>
           <hr />
-          <span class="material-symbols-outlined" style="cursor: pointer">
+          <a href="cart.html">
+            <span class="material-symbols-outlined" style="cursor: pointer">
             local_mall
           </span>
+          </a>
         </div>
       </div>
       <div class="navbar">
-        <img src="./assests/Sport style.png" alt="" />
+        <img id="homePageLogo" src="./assests/Sport style.png" alt="SportStyle" />
         <a href="index.html">NEW</a>
         <a href="section_men.html">MEN</a>
         <a href="section_women.html">WOMEN</a>
@@ -153,7 +157,7 @@
             <span>to see express delivery options</span>
         </div>
         <div class="items-found">
-            <span>1999 items found</span>
+            <span>200+ items found</span>
         </div>
     </div>
       <div id="card-container">
